<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="itp341.wang.cherrie.a3.MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">
        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:id="@+id/americanView"
            android:onClick="displayAmericanMessage"/>

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginLeft="15dp"
            android:layout_gravity="right"
            android:layout_weight="0.1"
            android:id="@+id/chineseView"
            android:onClick="displayChineseMessage"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/linearLayout2"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="0dp"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">
        <TextView
            android:id="@+id/textView1"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/american"
            android:layout_gravity="left"
            android:background="#88FF0000"/>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/chinese"
            android:layout_gravity="right"
            android:background="#8800FF00"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/linearLayout3"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="0dp"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">
        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:id="@+id/indianView"
            android:onClick="displayIndianMessage"/>

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginLeft="15dp"
            android:layout_gravity="right"
            android:layout_weight="0.1"
            android:id="@+id/italianView"
            android:onClick="displayItalianMessage"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/linearLayout4"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="0dp"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">
        <TextView
            android:id="@+id/textView3"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/indian"
            android:layout_gravity="left"
            android:background="#88FF0000"/>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/italian"
            android:layout_gravity="right"
            android:background="#8800FF00"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout6"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/linearLayout5"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="0dp"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">
        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:id="@+id/portView"
            android:onClick="displayMiddleEastMessage"/>

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginLeft="15dp"
            android:layout_gravity="right"
            android:layout_weight="0.1"
            android:id="@+id/middleEastView"
            android:onClick="displayPortMessage"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/linearLayout7"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/linearLayout6"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="0dp"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">
        <TextView
            android:id="@+id/textView5"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/middle_east"
            android:layout_gravity="left"
            android:background="#88FF0000"/>

        <TextView
            android:id="@+id/textView6"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/port"
            android:layout_gravity="right"
            android:background="#8800FF00"/>
    </LinearLayout>

</RelativeLayout>
</ScrollView>